# course-work-on-TRPO

./: .gitlab-ci.yml  CMakeLists.txt  Makefile  README.md  leaderboard.txt
src/lib/: drawer.cpp  drawer.hpp  grid.cpp  grid.hpp  links.cpp  links.hpp  logic.cpp  logic.hpp
src/main/: main.cpp
test/: test.cpp
